@@ -2,6 +2,8 @@
 * Fix where pagination would not get triggered in watchlist builder selected points table
 * Allow non-admin users to create reset-password token for users they had permission to edit
 * Fix for non-admin users cannot edit other users when Edit own user details system permission is not set
+* Fix for non-admin users cannot see permissions inputs when editing own profile
+* New users automatically get the same Organization as the creating user
 
 *Version 4.2.0*
 * Upgraded for Mango 4.2.0
